# pomodoro-timer

./: LICENSE  Makefile  Makefile.am  Makefile.in  README.md  configure  configure.ac  main.c  main.desktop
src/: structures.h
src/features/: timer.c  timer.h
src/frontend/: frontend.c  frontend.h  style.css  view.glade
src/signals/: options.c  options.h  timer_buttons.c  timer_buttons.h
